opam-version: "2.0"
maintainer: "zimmi48@gmail.com"
version: "dev"

homepage: "https://github.com/Zimmi48/enigme"
dev-repo: "git+https://github.com/Zimmi48/enigme.git"
bug-reports: "https://github.com/Zimmi48/enigme/issues"
license: "MIT"

synopsis: "A mathematical enigma formalized in Coq"
description: """
A mathematical enigma formalized in Coq using SSReflect
"""

build: [make "-j%{jobs}%"]
install: [make "install"]
depends: [
  "coq" {>= "8.20"}
  "coq-mathcomp-ssreflect" {>= "2.0"}
]

tags: [
  "category:Mathematics/Logic/Foundations"
  "keyword:enigma"
  "keyword:mathematics"
  "logpath:Enigme"
]
authors: [
  "Théo Zimmermann"
]